fixed overlapping issue and added header feature
made header disappear after 500px scrolling

--- a/app/src/style/header.css
+++ b/app/src/style/header.css
@@ -130,7 +130,7 @@ body {
     justify-content: center;
     align-items: center;
     gap: 1rem;
-    width: 100vw;
+    width: 100%;
     height: 50px;
     background-color: rgba(201, 202, 203, 0.5);
 }
